converted to Chat App

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,5 +20,9 @@
     <div><input type="submit" class="btn btn-primary"></div>
     </form>
 
+    <div id="responses" class="alert" role="alert">
+        {{model.history}}
+     </div>
+
 </div>
 {% endblock %}
